[package]
name = "photon-mono-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"

rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"

stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f107", "medium"] }
spi-memory = "0.2.0"

[[bin]]
name = "dump"
path = "src/main.rs"
test = false
bench = false
